--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,7 @@ body {
     color: #ffffff;
 }
 
+/* can i consolidate .header h1 and .seo and just remove the .seo class */
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -86,6 +87,7 @@ p {
     background-color: #2589bd;
 }
 
+/* Can I consolidate the below 3 since they are all the same */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,6 +103,7 @@ p {
     color: #ffffff;
 }
 
+/* can i also consolidate the below 3 into 1 */
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -116,6 +119,7 @@ p {
     text-align: center;
 }
 
+/* can i consolidate the below 3 into 1 */
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -134,6 +138,7 @@ p {
     max-width: 150px;
 }
 
+/* can i consolidate the below 3 */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -161,6 +166,7 @@ p {
     color: #ffffff;
 }
 
+/* can i consolidate the below 3 */
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -173,6 +179,7 @@ p {
     max-height: 200px;
 }
 
+/* can i consolidate the below 3 */
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
