--- a/assets/styles.css
+++ b/assets/styles.css
@@ -104,7 +104,13 @@ p {
 }
 
 /* can i also consolidate the below 3 into 1 */
-.benefit-lead h3 {
+h3{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/* after doing my own test, i'm able to find the 3 below are not necessary they can all just be consolidated into all h3 elements */
+/* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -117,7 +123,7 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
 /* can i consolidate the below 3 into 1 */
 .benefit-lead img {
